# lichess-tauri

./: .gitignore  README.md  engine-directory.json  index.html  package-lock.json  package.json  stockfish.py  tailwind.config.cjs  tsconfig.json  version.json  vite.config.ts
.github/workflows/: build.yml  check-engine-directory.yml  ci.yml  gh-pages.yml  github-pages.yml  pages.yml  rust.yml  tauri-check-build.yml  tauri-publish.yml
.husky/: pre-commit
pages/: engine-directory.json
scripts/: check-engine-directory.py
src/: App.vue  main.css  main.ts  router.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/2022-11-27-000000_init/: down.sql  up.sql
src-tauri/public/: oauth_response.html
src-tauri/src/: db.rs  engine_directory.rs  lichess.rs  login.rs  main.rs  schema.rs  utils.rs
src/components/: AddCustomEnginePage.vue  AddEnginePage.vue  ChecklistItem.vue  Chessboard.vue  Dashboard.vue  Engine.vue  EngineForm.vue  EnginesPage.vue  GettingStarted.vue  HomePage.vue  LichessLogin.vue  LocalEngine.vue  PageTitle.vue  SettingsPage.vue  SleepCountdown.vue  StatusBar.vue  SystemInfo.vue
src/stores/: analysis.ts  engines.ts  event-logs.ts  settings.ts  user.ts  work-requests.ts
src/utils/: engine-crud.ts  oauth.ts  settings.ts  sysyinfo.ts  types.ts
thunder-tests/: thunderActivity.json
