[package]
name = "lichess-tauri"
version = "0.0.0"
description = "Connect a local Stockfish instance to Lichess.org analysis"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1", features = [] }

[dependencies]
iter-read = "0.3.1"
rand = "0.8.5"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls-native-roots"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.26.7"
tauri = { version = "1.1", features = ["api-all"] }
tauri-plugin-oauth = { git = "https://github.com/FabianLars/tauri-plugin-oauth" }
zip = "0.6.3"


[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
