[package]
name = "lichess-tauri"
version = "0.0.0"
description = "Connect a local Stockfish instance to Lichess.org analysis"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1", features = [] }

[dependencies]
diesel = { version = "2.0.2", features = ["sqlite", "chrono", "uuid"] }
diesel_migrations = { version = "2.0.0", features = ["sqlite"] }
iter-read = "0.3.1"
libsqlite3-sys = { version = "0.25.2", features = ["bundled"] }
oauth2 = "4.4.1"
open = "5.0.0"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls-native-roots"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.26.7"
tar = "0.4.38"
tauri = { version = "1.1", features = [ "shell-all", "fs-all", "dialog-open", "reqwest-native-tls-vendored" ] }
tauri-plugin-oauth = { git = "https://github.com/FabianLars/tauri-plugin-oauth" }
zip = "0.6.3"


[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
